--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "husky": "4.3.8",
     "ignore-loader": "^0.1.2",
     "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest-image-snapshot": "^4.4.1",
     "jest-junit-reporter": "^1.1.0",
     "jest-puppeteer": "5.0.2",
     "jsdom": "^16.5.3",
