--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@fast-csv/parse": "4.3.6",
     "@mdn/browser-compat-data": "3.3.2",
     "accept-language-parser": "1.5.0",
+    "browser-specs": "^1.34.2",
     "chalk": "4.1.1",
     "cheerio": "1.0.0-rc.6",
     "cli-progress": "^3.9.0",
