--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -84,8 +84,12 @@ jobs:
           # adding assertions here.
           # See https://github.com/GoogleChrome/lighthouse-ci/blob/master/docs/configuration.md#categories
 
-      - name: DEbug
-        run: |
-          ls -l
-          ls -l temporary-public-storage
-          tree temporary-public-storage
+      - name: Audit URLs using Lighthouse
+        uses: treosh/lighthouse-ci-action@v7
+        with:
+          urls: |
+            http://localhost:5000/en-US/
+            http://localhost:5000/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/forEach/
+          # budgetPath: ./budget.json # test performance budgets
+          uploadArtifacts: true # save results as an action artifacts
+          temporaryPublicStorage: true # upload lighthouse report to the temporary storage
