--- a/.github/workflows/npm-published-simulation.yml
+++ b/.github/workflows/npm-published-simulation.yml
@@ -31,12 +31,13 @@ jobs:
         with:
           path: |
             node_modules
-          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}-${{ hashFiles('.github/workflows/npm-published-simulation.yml') }}
 
       - name: Install all yarn packages
         if: steps.cached-node_modules.outputs.cache-hit != 'true'
         env:
-          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
+          # PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 1
+          PLAYWRIGHT_BROWSERS_PATH: $HOME/pw-browsers
         run: yarn --frozen-lockfile
 
       - name: Setup kernel for react native, increase watchers
@@ -87,16 +88,16 @@ jobs:
           # This will make sure the tests in `testing/tests/*.test.js` only run
           # if the development server is up and ready to be tested.
           TESTING_DEVELOPING: true
-          # Use local chrome installs since we skip downloading it as part
-          # of the yarn installs above
-          PUPPETEER_EXECUTABLE_PATH: /usr/bin/google-chrome
+          # # Use local chrome installs since we skip downloading it as part
+          # # of the yarn installs above
+          # PUPPETEER_EXECUTABLE_PATH: /usr/bin/google-chrome
           # When running Yari from within mdn/content it only starts 1 server;
           # the one on localhost:5000. No React dev server; the one
           # on localhost:3000.
           # Testing that dev server is not relevant or important in this context.
           DEVELOPING_SKIP_DEV_URL: true
         run: |
-          yarn test:testing developing
+          yarn test:developing
 
       - name: Debug server's stdout and stderr if tests failed
         if: failure()
